# pyreadability

./: .gitignore  INSTALL.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  build.sh  main.py  publish.sh  pyproject.toml  requirements.txt  setup.py  test_library.py
examples/: making_copilot_smarter.md  oneplus15_review.md
pyreadability/: __init__.py  helpers.py  readability.py
readability/: __init__.py  readability.py
tests/: test_readability.py
