[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pyreadability"
version = "0.1.0"
description = "A pure Python implementation of Mozilla's Readability.js"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "pyreadability contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Markup :: HTML",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests",
    "beautifulsoup4",
    "lxml",
    "html2text",
]

[project.urls]
Homepage = "https://github.com/randerzander/pyreadability"
Repository = "https://github.com/randerzander/pyreadability"

[tool.setuptools]
py-modules = ["main"]

[project.scripts]
pyreadability = "main:main"
